--- a/src/app/client/Interfaces/log-in-client/log-in-client.component.html
+++ b/src/app/client/Interfaces/log-in-client/log-in-client.component.html
@@ -12,6 +12,7 @@
               </p>
               <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-outline form-dark mb-4">
+                  <label class="form-label" for="typeEmailX">Nom d'utilisateur</label>
                   <input
                     type="email"
                     id="typeEmailX"
@@ -19,10 +20,11 @@
                     formControlName="email"
                     placeholder="Votre adresse e-mail"
                   />
-                  <label class="form-label" for="typeEmailX">Email</label>
+                  
                 </div>
 
                 <div class="form-outline form-dark mb-4">
+                  <label class="form-label" for="typePasswordX">Mot de passe</label>
                   <input
                     type="password"
                     id="typePasswordX"
@@ -30,7 +32,7 @@
                     formControlName="password"
                     placeholder="Votre mot de passe"
                   />
-                  <label class="form-label" for="typePasswordX">Mot de passe</label>
+                  
                 </div>
 
                 <button class="btn btn-primary mt-4 pt-2" type="submit">Connexion</button>
