--- a/src/app/fournisseur/Interfaces/ajouter-produit/ajouter-produit.component.html
+++ b/src/app/fournisseur/Interfaces/ajouter-produit/ajouter-produit.component.html
@@ -2,29 +2,32 @@
 
 <div class="container">
   <h3><i class="fas fa-plus-circle"></i> Ajout Produit</h3>
-  <form [formGroup]="productForm" (ngSubmit)="ajouterProduit()">
-    <div class="mb-3">
-      <label for="prix">Prix du Produit</label>
-      <input id="prix" class="form-control" type="number" formControlName="price" />
-    </div>
-
-    <div class="mb-3">
-      <label for="img">Image du Produit</label>
-      <input id="img" class="form-control" type="text" formControlName="img" />
-    </div>
-
+  <form [formGroup]="productForm" >
     <div class="mb-3">
       <label for="description">Description du Produit</label>
       <input id="description" class="form-control" type="text" formControlName="label" />
     </div>
 
     <div class="mb-3">
-      <label for="dispo">Disponibilité du Produit</label>
-      <input id="dispo" class="form-control" type="text" formControlName="stock" />
+      <label for="prix">Prix du Produit</label>
+      <input id="prix" class="form-control" type="number" formControlName="price" />
     </div>
+    <div class="mb-3">
+      <label for="dispo">Stock</label>
+      <input id="dispo" class="form-control" type="text" formControlName="stock" />
+    </div> 
 
     <div class="mb-3">
-      <input type="submit" class="btn btn-success" value="Ajouter" />
+      <label for="img">Image du Produit</label>
+      <input id="img" class="form-control" type="file" (change)="selectFiles($event)" />
+    </div>
+
+   
+
+    
+
+    <div class="mb-3">
+      <input type="submit" class="btn btn-success" (click)="ajouterProduit()" value="Ajouter" />
       <input type="button" class="btn btn-danger" value="Vider" (click)="onVider()" />
     </div>
   </form>
