--- a/src/app/client/Interfaces/log-in-client/log-in-client.component.html
+++ b/src/app/client/Interfaces/log-in-client/log-in-client.component.html
@@ -18,7 +18,7 @@
                     id="typeEmailX"
                     class="form-control form-control-lg"
                     formControlName="email"
-                    placeholder="Votre adresse e-mail"
+                    placeholder="Votre nom d'utilisateur "
                   />
                   
                 </div>
