--- a/src/app/client/Interfaces/registerCl/register-client.component.html
+++ b/src/app/client/Interfaces/registerCl/register-client.component.html
@@ -29,7 +29,7 @@
                       id="typeadresse"
                       class="form-control form-control-lg"
                       formControlName="adresse"
-                      placeholder="Votre mot de passe"
+                      placeholder="Votre adresse"
                     />
                     
                   </div>
@@ -40,7 +40,7 @@
                       id="typenumber"
                       class="form-control form-control-lg"
                       formControlName="tel"
-                      placeholder="Votre mot de passe"
+                      placeholder="Votre numéro"
                     />
                     
                   </div>
