--- a/src/app/livreur/Interfaces/liste-commandes/liste-commandes.component.html
+++ b/src/app/livreur/Interfaces/liste-commandes/liste-commandes.component.html
@@ -5,29 +5,36 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        
         <th scope="col">Numéro Commande</th>
         <th scope="col">État</th>
         <th scope="col">Client Adresse</th>
         <th scope="col">Date</th>
         <th scope="col">Actions</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let commande of commandes">
         <th scope="row">{{ commande._id }}</th>
-        <td>{{ commande.num_commande }}</td>
+        
         <td>{{ commande.etat }}</td>
-        <td>{{ commande.client.adresse.ville }}</td>
-        <td>{{ commande.date }}</td>
+        <td>{{ commande.client.adresse }}</td>
+        <td>{{ commande.date|date }}</td>
         <td>
           <a
             [routerLink]="['/livreur/selectedCommande', commande._id]"
-            class="btn btn-success"
+            class="btn btn-info"
           >
             <i class="fas fa-info"></i> Voir les détails
           </a>
+          
         </td>
+        <td><button class="btn btn-primary " (click)="changeEtat(commande)">
+          Change Etat to Livree
+        </button></td>
+        
+          
       </tr>
     </tbody>
   </table>
