--- a/src/app/client/Interfaces/listCommandes/list-commande.component.html
+++ b/src/app/client/Interfaces/listCommandes/list-commande.component.html
@@ -1,11 +1,11 @@
 
-
+<app-navbar></app-navbar>
 <div class="container">
   <h2>Liste des Commandes</h2>
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        
         <th scope="col">Numéro Commande</th>
         <th scope="col">État</th>
         
@@ -16,14 +16,14 @@
     <tbody>
       <tr *ngFor="let commande of client.commandes">
         <th scope="row">{{ commande._id }}</th>
-        <td>{{ commande.num_commande }}</td>
+        
         <td>{{ commande.etat }}</td>
         
-        <td>{{ commande.date }}</td>
+        <td>{{ commande.date|date }}</td>
         <td>
           <a
             [routerLink]="['/listCommande', commande._id]"
-            class="btn btn-success"
+            class="btn btn-info"
           >
             <i class="fas fa-info"></i> Voir les détails
           </a>
