--- a/src/app/client/Interfaces/panier/panier.component.html
+++ b/src/app/client/Interfaces/panier/panier.component.html
@@ -1,20 +1,22 @@
 <app-navbar></app-navbar>
 
-<div class="dark-overlay" style="position: relative; background-color: rgba(141, 139, 139, 0.5)">
+<div class="dark-overlay" style="position: relative; background-color: rgba(249, 246, 246, 0.5)">
   <div class="container mt-5">
-    <h2 class="text-white mb-4">Votre Panier</h2>
+    <h2 class="text-dark mb-4">Votre Panier</h2>
 
     <ul class="list-group">
       <li *ngFor="let produit of panier; let i = index" class="list-group-item list-group-item-secondary">
         <div class="d-flex justify-content-between align-items-center">
           <div class="d-flex align-items-center">
-            <img [src]="produit.img" id="c1" class="cart-item-img" />
+            <img [src]="url+produit.img" id="c1" class="cart-item-img" />
             <span class="ml-3">{{ produit.label }}</span>
           </div>
           
           <div class="d-flex align-items-center">
+            <label>Quantité :  </label>
+            <input type="number" style="width: 50px;" [value]="qte[i]"  [(ngModel)]="qte[i]" (keyup)="change($event,i)"/>
             <span class="mr-3">Prix: {{ produit.price |currency:'TND'}}</span>
-            <button class="btn btn-outline-dark" (click)="supprimerProduit(i)">
+            <button class="btn btn-danger" (click)="supprimerProduit(i)">
               <i class="fas fa-times"></i>
               Supprimer
             </button>
@@ -24,7 +26,7 @@
     </ul>
 
     <div class="total mt-4">
-      <p class="text-white">Total: {{ calculerTotal() | currency:'TND' }}</p>
+      <p class="text-dark">Total: {{ calculerTotal() | currency:'TND' }}</p>
       <button class="btn btn-success" (click)="commander()">Commander</button>
     </div>
   </div>
