--- a/src/app/fournisseur/Interfaces/register/register.component.html
+++ b/src/app/fournisseur/Interfaces/register/register.component.html
@@ -1,3 +1,5 @@
+
+
 <section class="vh-100 gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -9,8 +11,10 @@
                 <p class="text-light mb-5">
                   Rejoignez Easy Delivery en créant un compte Fournisseur.
                 </p>
-                <form (formGroup)="signupForm" (ngSubmit)="onSubmit()">
+                <form [formGroup]="signupForm" >
+
                   <div class="form-outline form-light mb-4">
+                    <label class="form-label" for="typeUsername">Nom d'utilisateur</label>
                     <input
                       type="text"
                       id="typeUsername"
@@ -18,10 +22,11 @@
                       formControlName="username"
                       placeholder="Votre nom d'utilisateur"
                     />
-                    <label class="form-label" for="typeUsername">Nom d'utilisateur</label>
+                   
                   </div>
   
                   <div class="form-outline form-light mb-4">
+                    <label class="form-label" for="typePassword">Mot de passe</label>
                     <input
                       type="password"
                       id="typePassword"
@@ -29,13 +34,13 @@
                       formControlName="password"
                       placeholder="Votre mot de passe"
                     />
-                    <label class="form-label" for="typePassword">Mot de passe</label>
+                    
                   </div>
   
                  
               
   
-                  <button class="btn btn-light mt-4 pt-2" type="submit">Créer un compte</button>
+                  <button class="btn btn-light mt-4 pt-2" type="submit"(click)="onSubmit()">Créer un compte</button>
   
                   <div class="mt-3">
                     <p class="mb-0">
