--- a/src/app/livreur/Interfaces/log-in/log-in.component.html
+++ b/src/app/livreur/Interfaces/log-in/log-in.component.html
@@ -11,17 +11,19 @@
                 </p>
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                   <div class="form-outline form-light mb-4">
+                    <label class="form-label" for="typeEmailX">Nom d'utilisateur</label>
                     <input
                       type="email"
                       id="typeEmailX"
                       class="form-control form-control-lg"
                       formControlName="email"
-                      placeholder="Votre adresse e-mail"
+                      placeholder="Votre nom d'utilisateur"
                     />
-                    <label class="form-label" for="typeEmailX">Email</label>
+                    
                   </div>
   
                   <div class="form-outline form-light mb-4">
+                    <label class="form-label" for="typePasswordX">Mot de passe</label>
                     <input
                       type="password"
                       id="typePasswordX"
@@ -29,7 +31,7 @@
                       formControlName="password"
                       placeholder="Votre mot de passe"
                     />
-                    <label class="form-label" for="typePasswordX">Mot de passe</label>
+                    
                   </div>
   
                   <button class="btn btn-light mt-4 pt-2" type="submit">Connexion</button>
