--- a/src/app/livreur/Interfaces/navbarliv/navbarliv.component.html
+++ b/src/app/livreur/Interfaces/navbarliv/navbarliv.component.html
@@ -33,7 +33,7 @@
   
           <li class="nav-item">
             <a class="nav-link" href="#" routerLink="/livreur/commandes" routerLinkActive="active">
-              <i class="fas fa-shopping-basket"></i> Mes Commandes
+              <i class="fas fa-shopping-basket"></i>  Commandes
             </a>
           </li>
   
