--- a/src/app/client/Interfaces/nav-home/nav-home.component.html
+++ b/src/app/client/Interfaces/nav-home/nav-home.component.html
@@ -25,7 +25,7 @@
       
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
-         
+          
           <li class="nav-item">
             <a class="nav-link" [routerLink]="'/'" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                 <i class="fa-solid fa-house"></i> Accueil
@@ -37,18 +37,23 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="'/listCommande'" routerLinkActive="active">
-              <i class="fa-brands fa-product-hunt"></i> mes commandes
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" [routerLink]="'/panier'" routerLinkActive="active">
               <i class="fa-solid fa-cart-plus"></i> Panier
             </a>
           </li>
           <li class="nav-item">
             <a *ngIf="!isLoggedIn" class="nav-link" routerLink="/logIn" routerLinkActive="active">
-              <i class="fa-solid fa-sign-in"></i> S'authentifier
+              <i class="fa-solid fa-sign-in"></i> S'authentifier Client
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/fournisseur'" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                <i class="fa-solid fa-sign-in"></i> Fournisseur
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/livreur'" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                <i class="fa-solid fa-sign-in"></i>  Livreur
             </a>
           </li>
           <li class="nav-item">
