--- a/src/app/fournisseur/Interfaces/login-four/login-four.component.html
+++ b/src/app/fournisseur/Interfaces/login-four/login-four.component.html
@@ -2,15 +2,15 @@
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-light" style="border-radius: 1rem; box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);">
+          <div class="card bg-light text-dark" style="border-radius: 1rem; box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);">
             <div class="card-body p-5 text-center">
               <div class="mb-md-5 mt-md-4 pb-5">
                 <h2 class="fw-bold mb-2 text-uppercase">Connectez-vous en tant que Fournisseur</h2>
-                <p class="text-light mb-5">
+                <p class="text-dark mb-5">
                   Bienvenue sur Easy Delivery! Connectez-vous pour accéder à votre compte de fournisseur.
                 </p>
                 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                  <div class="form-outline form-light mb-4">
+                  <div class="form-outline form-dark mb-4">
                     <label class="form-label" for="typeEmailX">Nom d'utilisateur</label>
                     <input
                       type="email"
@@ -22,7 +22,7 @@
                     
                   </div>
   
-                  <div class="form-outline form-light mb-4">
+                  <div class="form-outline form-dark mb-4">
                     <label class="form-label" for="typePasswordX">Mot de passe</label>
                     <input
                       type="password"
@@ -34,12 +34,12 @@
                     
                   </div>
   
-                  <button class="btn btn-light mt-4 pt-2" type="submit">Connexion</button>
+                  <button class="btn btn-primary mt-4 pt-2" type="submit">Connexion</button>
   
                   <div class="mt-3">
                     <p class="mb-0">
                       Vous n'avez pas de compte ?
-                      <a routerLink="/fournisseur/register" class="text-light fw-bold">S'inscrire</a>
+                      <a routerLink="/fournisseur/register" class="text-dark fw-bold">S'inscrire</a>
                     </p>
                   </div>
                 </form>
