--- a/src/app/fournisseur/Interfaces/register/register.component.html
+++ b/src/app/fournisseur/Interfaces/register/register.component.html
@@ -4,16 +4,16 @@
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-light" style="border-radius: 1rem; box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);">
+          <div class="card bg-light text-dark" style="border-radius: 1rem; box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);">
             <div class="card-body p-5 text-center">
               <div class="mb-md-5 mt-md-4 pb-5">
                 <h2 class="fw-bold mb-2 text-uppercase">Créez un nouveau compte Fournisseur</h2>
-                <p class="text-light mb-5">
+                <p class="text-dark mb-5">
                   Rejoignez Easy Delivery en créant un compte Fournisseur.
                 </p>
                 <form [formGroup]="signupForm" >
 
-                  <div class="form-outline form-light mb-4">
+                  <div class="form-outline form-dark mb-4">
                     <label class="form-label" for="typeUsername">Nom d'utilisateur</label>
                     <input
                       type="text"
@@ -25,7 +25,7 @@
                    
                   </div>
   
-                  <div class="form-outline form-light mb-4">
+                  <div class="form-outline form-dark mb-4">
                     <label class="form-label" for="typePassword">Mot de passe</label>
                     <input
                       type="password"
@@ -40,12 +40,12 @@
                  
               
   
-                  <button class="btn btn-light mt-4 pt-2" type="submit"(click)="onSubmit()">Créer un compte</button>
+                  <button class="btn custom-orange-btn mt-4 pt-2" type="submit"(click)="onSubmit()">Créer un compte</button>
   
                   <div class="mt-3">
                     <p class="mb-0">
                       Vous avez déjà un compte ?
-                      <a href="fournisseur/login" class="text-light fw-bold">Connectez-vous</a>
+                      <a href="fournisseur/login" class="text-dark fw-bold">Connectez-vous</a>
                     </p>
                   </div>
                 </form>
