fix selected produit

--- a/src/app/client/Interfaces/selected-produit/selected-produit.component.html
+++ b/src/app/client/Interfaces/selected-produit/selected-produit.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="card">
-        <img [src]="produit.img" id="c1" class="card-img-top border border-primary" alt="{{ produit.label }}" />
+        <img [src]="url+produit.img" id="c1" class="card-img-top border border-primary" alt="{{ produit.label }}" />
         
         <div class="card-body">
           <h5 class="card-title">{{ produit.label }}</h5>
